fixes alignment of text on example cages

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -244,7 +244,7 @@ a.powered-by-firepad {
 
 .float-down {
     position: relative;
-    top: 5vh;
+    top: 3.5vh;
 }
 
 .float-up {
